assets/css/style.css
body {
	background-color: #F9CBCD;
	margin: 0;
	max-width: 100%;
    overflow-x: hidden;
}

/*----------Section Padding*/
.hero-wrapper,
.news-wrapper,
.music-wrapper {
    padding-left:0 !important;
    padding-right: 0 !important;
}

/*----------Headings*/
.section-heading {
    color: #040304;
    font-weight:100;
    font-family: "Cabin", sans-serif;
    margin-top: 2em;
    text-align: center;
}

hr {
    background-color: #040304;
    height: .05em;
    margin-bottom: 3em;
    margin-top: 0;
    width: 25%;
}

/*----------Nav*/

#navbarAri {
    font-family: 'Roboto', sans-serif;
    font-size: 1.75rem;
    padding-bottom: 0;
    padding-top: 0;
}

@media (max-width: 768px) {
	#navLinks .nav-link {
		margin: 0 auto;
	}
}

#navbarAri .navbar-brand {
    color: #040304;
    font-size: 1.75rem;
}

#navLinks .nav-link:hover{
    color: #040304;
}

/*----------Hero*/
.hero-wrapper {
    background-image: url(../images/ari-main.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    height: 100vh;
    width: 100vw;
}

@media (max-width: 576px) {
    .hero-wrapper {
        background-size: cover;
    }
}

/*----------News*/
.news-content {
    margin: 0 auto;
}

.card {
  border: none;
}

/*Source: https://codepen.io/littlesnippets/pen/vKpvGP/ */
.ari-news {
  background-color: #040304;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
  color: #F9CBCD;
  font-family: 'Cabin', sans-serif;
  font-size: 16px;
  line-height: 1.8em;
  min-width: 250px;
  overflow: hidden;
  position: relative;
  width: 100%;
}

.ari-news * {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

.card-img {
  filter: grayscale(100%);
  max-width: 100%;
  vertical-align: top;
  position: relative;
  opacity: 0.75;
}

.card-title {
  position: absolute;
  bottom: 0;
  margin-bottom: 1.5em;
  z-index: 1;
  font-weight: 800;
  letter-spacing: -0.4px;
}

.card-text {
  bottom: 0;
  position: absolute;
  margin-bottom: .5em;
}

.ari-news-hover {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  align-items: center;
  background-color: rgba(4, 3, 4, 0.75);
  display: flex;
  font-size: 65px;
  justify-content: center;
  opacity: 0;
}

.ari-news a {
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  position: absolute;
  z-index: 1;
}

.ari-news:hover .ari-news-hover,
.ari-news.ari-news-hover  {
  -webkit-transition-delay: 0.1s;
  transition-delay: 0.1s;
  opacity: 1;
}

.ari-news:hover .card-img-overlay,
.ari-news.hover .card-img-overlay {
  opacity: 0;
}

/*----------Music*/

.music-content {
    margin-bottom: 6.25em;
}

.music-info {
    text-align: center;
}

.music-info .title {
    color: #040304;
    font-family: "Cabin", sans-serif;
    font-weight: 300;
}

.music-item-center {
    justify-content: center !important;
}

.spotify-player {
	display: block;
	margin:auto;
}

.btn-ari {
	background-color: #040304;
	color:#F9CBCD;
	box-shadow: 0px 2px 4px rgba(4, 3, 4, 1);
    transition: all 0.3s ease 0s;
    cursor: pointer;
}

.btn-ari:hover {
    background-color: #A1ACB2;
    box-shadow: 0px 4px 8px rgba(161, 172, 178, 1);
    color:#fff;
    transform: translateY(-2px);
}

@media (max-width: 576px) {
	.title {
		margin-top: 1em;
	}
}

/*----------Video*/
/* Credit: Nicolas Gallagher and SUIT CSS.*/

.embed-responsive {
  position: relative;
  display: block;
  height: 0;
  padding: 0;
  overflow: hidden;
}
.embed-responsive .embed-responsive-item,
.embed-responsive iframe,
.embed-responsive embed,
.embed-responsive object,
.embed-responsive video {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
}

.embed-responsive-16by9 {
  padding-bottom: 56.25%;
}

.embed-responsive-4by3 {
  padding-bottom: 75%;
}

/*----------Tour*/
.tour-wrapper {
	padding-bottom: 2em;
}

.tour-table {
	border-collapse: collapse;
	color: #F9CBCD;
	font-size: 13px;
	font-weight: 600;
	line-height: 2;
	margin: 0 auto;
	width: 100%;	
}

.tour-table td {
	background: #040304;
	border-bottom: 2px solid #F9CBCD;
	font-family: "Cabin", sans-serif;
	padding: 20px 10px;
	
}

.tour-table td:first-child {
	width: 20.5%;
}

.tour-table td:last-child {
	font-size: 11px;
	font-weight: 700;
	letter-spacing: 0;
	text-align: center;
	text-transform: uppercase;	
	width: 25.5%;
}

.tour-table a {
	color: inherit;
	text-decoration: none;
	transition: background-color 0.25s ease-in-out; 
	-webkit-transition: background-color 0.25s ease-in-out; 
	-moz-transition: background-color 0.25s ease-in-out; 
	-o-transition: background-color 0.25s ease-in-out;
}

.tour-table a:hover {
	background-color: #F9CBCD;
	color:#040304;
}
thead {
	display: none;
}

.tour-table .location {
	display: block;
}

.tour-table .city {
	color: #F9CBCD;
	font-size:.75em;
}

@media (min-width: 768px) {
	.tour-table .location {
		display: inline;
	}
}

/*----------Contact*/
.form-contact {
	background-color: #040304;
	border-radius: 1%;
	color: #F9CBCD;
	font-family: "Cabin", sans-serif;
	margin-bottom: 2%;
	padding: 2%;
	width: 100%;
}

.contact-send {
	color: #040304;
	background-color: #F9CBCD;
}

@media (max-width: 576px) {
	.contact-send {
		width: 100%;
	}
}

/*----------Footer*/
footer {
	background-color: #F9CBCD;
	display: flex;
	justify-content: center;
	min-height: 120px;	
}

.footeritem {
    width:25%;
}

.footeritem a {
	height: 120px;
	text-decoration: none;
	width: 100%;
}

.footeritem a i {
	color: #040304;
	font-size: 3em;
	padding-top: .75em;
}

